trying to fix the sweet background bug on mobile

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,8 @@
+.main {
+    background-image: none;
+    background-color: none;
+}
+
 .background {
     background-image: url(/images/background-img.jpg);
     background-position: center;
